--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,11 +15,11 @@ body {
 .wrapper {
     width: 98%;
     max-width: 1920px;
-    margin: 10px auto;
+    margin: .3em auto;
 }
 
 .creator {
-    padding: 1.2em;
+    padding-top: 1.2em;
 
     &__title {
         font-size: 2.5rem;
@@ -140,7 +140,7 @@ body {
         position: relative;
         background: none;
         border: 2px solid #000;
-        padding: .7em 2.2em;
+        padding: .7em 1.4em;
         border-radius: 6px;
         font-size: 1.2rem;
         cursor: pointer;
@@ -158,6 +158,7 @@ body {
         }
 
         &--info {
+            display: none;
             padding: 0;
             height: 100%;
             border: 0;
@@ -187,7 +188,7 @@ body {
     &__preview {
         display: none;
         text-align: justify;
-        padding: 2em;
+        padding: 2em 0;
 
         h2 {
             font-size: 2.5em;
@@ -212,12 +213,14 @@ body {
 
     &__info {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        min-height: 65px;
+        min-height: 40px;
         margin: 0 0 1em 0;
         padding: 0 2em;
         color: #fff;
+        text-align: center;
         background-color: rgba(0, 0, 0, 0.835);
         border-radius: 6px;
 
@@ -227,14 +230,14 @@ body {
     }
 
     &__content {
-        width: 90%;
+        width: 98%;
         max-width: 870px;
         margin: 0 auto;
         padding: 0 1em;
         text-align: justify;
 
         p {
-            padding: .2em 1em;
+            padding: .2em 0;
         }
 
         a {
@@ -257,6 +260,8 @@ body {
             display: block;
             width: 100%;
             max-width: 400px;
+            padding: 1em;
+            margin: 0 auto;
         }
     }
 }
